pdftohtml 0.10
==============
First public release

pdftohtml 0.20
==============
-added complex document extraction 
-added image extraction
-added pdftohtml script

pdftohtml 0.21
==============
-added support for colored fonts
-bugfixes

pdftohtml 0.22
==============
- fixed Digital C++ compilation bug
- fixed -e bug
- other bugfixes

pdftohtml 0.30 (test version)
==============
-Added pdf-vector drawings extraction
-HTML output compatible with MI 4.0 
  (using the patches by Claus Hulstrom and Zoltan Hawryluk)
-output for XML post-processing (patch by Anjo Anjewierden)
-zoom option
-other bugfixes

pdftohtml 0.31 (test version)
==============
-bugfixes

pdftohtml 0.32 (*test* version)
-updated to use xpdf 1.0

pdftohtml 0.32b
===============
-experimental ability to specify output encoding (UTF-8 might work)
-ability to specify user/master password
-fixed core dump on documents with type 3 fonts only
-fixed bug with inline images not being handled properly

pdftohtml 0.33
==============
-Ghostscript is executed from the program itself, no need for external script
-ps output (for complex mode) is produced by pdftohtml, got rid of pdftops
-several XML-related fixes
-several memory leaks fixed (should not crash on large files now)

pdftohtml 0.33a
===============
-bug fixes
-join multiple <b></b>'s and <i></i>'s together

pdftohtml 0.33b
=============
-command line option to extract hidden text
-parts of hrefs (links) are joined together (just like <b> and <i>)
-paragraphs joined together
-fixed a crash
-updated Xpdf to 1.01